--- a/redis-services.yaml
+++ b/redis-services.yaml
@@ -9,6 +9,7 @@ spec:
   ports:
   - name: redis
     port: 6379
+  clusterIP: None
   selector:
     app: redis
 ---
@@ -22,5 +23,6 @@ spec:
   ports:
   - name: redis-sentinel
     port: 26379
+  clusterIP: None
   selector:
     app: redis-sentinel
