--- a/redis-sentinel-statefulset.yaml
+++ b/redis-sentinel-statefulset.yaml
@@ -1,10 +1,13 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: redis-sentinel
 spec:
   serviceName: redis-sentinel
   replicas: 3
+  selector:
+    matchLabels:
+      app: redis-sentinel
   template:
     metadata:
       labels:
