--- a/redis-statefulset.yaml
+++ b/redis-statefulset.yaml
@@ -1,10 +1,13 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: redis
 spec:
   serviceName: redis
   replicas: 3
+  selector:
+    matchLabels:
+      app: redis
   template:
     metadata:
       labels:
@@ -26,7 +29,7 @@ spec:
                 cat /mnt/config-map/slave.conf >> /mnt/conf/redis.conf\n
               fi\n
             "]
-        image:  docker-registry-default.apps.paosin.local/openshift/redis
+        image:  image-registry.openshift-image-registry.svc:5000/mpajak/redis
         volumeMounts:
         - name: data
           mountPath: /data
@@ -37,7 +40,7 @@ spec:
       containers:
       - name: redis
         command: ["/opt/rh/rh-redis32/root/usr/bin/redis-server", "/etc/redis/redis.conf"]
-        image:  docker-registry-default.apps.paosin.local/openshift/redis
+        image:  image-registry.openshift-image-registry.svc:5000/mpajak/redis
         ports:
         - name: redis
           containerPort: 6379
