--- a/redis-statefulset.yaml
+++ b/redis-statefulset.yaml
@@ -52,7 +52,7 @@ spec:
         resources:
           requests:
             cpu: 100m
-            #memory: 256Mi
+            memory: 4Gi
         readinessProbe:
           exec:
             command:
