--- a/redis-statefulset.yaml
+++ b/redis-statefulset.yaml
@@ -69,7 +69,7 @@ spec:
   - metadata:
       name: data
       annotations:
-        volume.alpha.kubernetes.io/storage-class: default
+        volume.alpha.kubernetes.io/storage-class: longhorn
     spec:
       accessModes: ["ReadWriteOnce"]
       resources:
@@ -78,7 +78,7 @@ spec:
   - metadata:
       name: conf
       annotations:
-        volume.alpha.kubernetes.io/storage-class: default
+        volume.alpha.kubernetes.io/storage-class: longhorn
     spec:
       accessModes: ["ReadWriteOnce"]
       resources:
